# oqd-dataschema

./: .gitattributes  .gitignore  README.md  flake.nix  mkdocs.yaml  pyproject.toml
docs/: api.md  explanation.md  index.md  tutorial.md
docs/api/: base.md  datastore.md  group.md  groupfield.md  utils.md
docs/stylesheets/: admonitions.css
docs/tutorials/: advanced.md  basic.md
examples/: custom_group.ipynb  dataschema.ipynb  test_h5pydantic.ipynb
pkgs/: derivation.nix
src/oqd_dataschema/: __init__.py  base.py  constrained.py  dataschema.py  dataset.py  datastore.py  folder.py  group.py  groups.py  table.py  utils.py
tests/: test_dataset.py  test_datastore.py  test_group.py  test_groupregistry.py  test_h5pydantic.ipynb  test_table.py  test_typeadapt.py
