[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "oqd-dataschema"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache 2.0" }

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research ",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Compilers",

  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "bidict>=0.23.1",
    "h5py>=3.13.0",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
docs = [
  "pymdown-extensions",
  "mkdocstrings",
  "mkdocs-material",
  "mkdocstrings-python",
  "mdx_truly_sane_lists",
]
tests = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["oqd_dataschema*"]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["ALL"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]


[project.urls]
Homepage = "https://github.com/OpenQuantumDesign/oqd-dataschema"
Repository = "https://github.com/OpenQuantumDesign/oqd-dataschema.git"
Issues = "https://github.com/OpenQuantumDesign/oqd-dataschema/issues"
